--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <script>
     const pages = [
-        "call_john"
+        "horoscope_app"
     ]  // in pages you should have the name of your DDD
     const turnPage = (segment) => {
     event = new CustomEvent('turnpage', { detail: segment });
