--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div id="tala-speech"
-        data-azure-key=""
+        data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
         data-tts-voice="en-US, JennyNeural"
         data-asr-language="en-US"
