--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
-        data-tts-voice="en-US, JennyNeural"
+        data-tts-voice="en-US, CoraNeural"
         data-asr-language="en-US"
         data-tts-lexicon=""
         data-i18n-click-to-start="Click to start!"
