--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
 </head>
 <body>
+<body style="background-color:blue;">
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
