--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-<body style="background-color:blue;">
+  <p style="background-image: url('background_astro.jpeg');">
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
