--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     </style>
 </head>
 <body>
+
+  <style>
+    body {
+      background-image: url('background_astro.jpeg');
+      background-repeat: no-repeat;
+    }
+    </style>
   <p style="background-image: url('background_astro.jpeg');">
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
