--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
+      background-attachment: fixed;
+      background-size: cover;
     }
     </style>
   <p style="background-image: url('background_astro.jpeg');">
