--- a/index.html
+++ b/index.html
@@ -28,23 +28,11 @@
 
   <style>
     body {
-      height: 100%;
-}
-
-.bg {
-  /* The image used */
-  background-image: url("background_astro.jpeg");
-
-  /* Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+      background-image: url('background_astro.jpeg');
+      background-size: cover;
     }
     </style>
-
+  <p style="background-image: url('background_astro.jpeg');">
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
