--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         }
         .control {
         position: absolute !important;
-        top: 10vh !important;
-        width: 50vw !important;
+        top: 150h !important;
+        width: 1500vw !important;
         }
         .select-wrapper {
         top: 20vh !important;
@@ -29,7 +29,7 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
-      background-size: cover;
+      background-size:100% 100vh;
     }
     </style>
   <p style="background-image: url('background_astro.jpeg');">
