--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
-      background-size:100% 100vh;
+      background-size: contain;
     }
     </style>
   <p style="background-image: url('background_astro.jpeg');">
