--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         }
         .control {
         position: absolute !important;
-        top: 150h !important;
-        width: 1500vw !important;
+        top: center !important;
+        width: center !important;
         }
         .select-wrapper {
         top: 20vh !important;
@@ -25,14 +25,12 @@
     </style>
 </head>
 <body>
-
   <style>
     body {
       background-image: url('background_astro.jpeg');
       background-size: contain;
     }
     </style>
-  <p style="background-image: url('background_astro.jpeg');">
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
