--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>DS2 Project</title>
     <style>
         .App {
-        height: 0 !important;
+        height: 20 !important;
         }
         .control {
         position: absolute !important;
-        top: center !important;
-        width: center !important;
+        top: 10vh !important;
+        width: 10vw !important;
         }
         .select-wrapper {
         top: 20vh !important;
@@ -28,7 +28,6 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
-      background-size: contain;
     }
     </style>
     <div id="tala-speech"
