--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         height: 20 !important;
         }
         .control {
-        position: absolute !important;
-        top: 10vh !important;
-        width: 10vw !important;
+        position: fixed !important;
+        top: 100vh !important;
+        width: 100% !important;
         }
         .select-wrapper {
         top: 20vh !important;
@@ -28,6 +28,7 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
+      background-size: 100%;
     }
     </style>
     <div id="tala-speech"
