--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         height: 20 !important;
         }
         .control {
-        position: fixed !important;
+        position: absolute !important;
         top: 100vh !important;
         width: 100% !important;
         }
