--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .control {
         position: absolute !important;
         top: 100vh !important;
-        width: 100% !important;
+        width: 50vw !important;
         }
         .select-wrapper {
         top: 20vh !important;
@@ -37,7 +37,7 @@
         data-tts-voice="en-US, CoraNeural"
         data-asr-language="en-US"
         data-tts-lexicon=""
-        data-i18n-click-to-start="Click to start!"
+        data-i18n-click-to-start="Welcome! Click to start!"
         data-i18n-click-to-continue="Click to continue"
         data-i18n-speaking="Talking…"
         data-i18n-listening="Listening…">
