--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         height: auto;
         }
         .splide__pagination__page.is-active {
-        background: #063746 !important;
+        background: #0fdf0b !important;
         }
     </style>
 </head>
