--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>DS2 Project</title>
+    <title>Horoscope Tarot App</title>
     <style>
         .App {
         height: 20 !important;
         }
         .control {
         position: absolute !important;
-        top: 100vh !important;
+        top: 10vh !important;
         width: 50vw !important;
         }
         .select-wrapper {
@@ -20,7 +20,7 @@
         height: auto;
         }
         .splide__pagination__page.is-active {
-        background: #0fdf0b !important;
+        background: #730fbf !important;
         }
     </style>
 </head>
