--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         height: 20 !important;
         }
         .control {
-        position: absolute !important;
-        top: 10vh !important;
-        width: 50vw !important;
+        position: static !important;
         }
         .select-wrapper {
         top: 20vh !important;
