--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         height: 20 !important;
         }
         .control {
-        position: static !important;
+        position: relative !important;
         }
         .select-wrapper {
-        top: 20vh !important;
+        top: 4vh !important;
         }
         .splide__slide img {
         width: 100%;
