--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         height: 20 !important;
         }
         .control {
-        position: relative !important;
+        position: sticky !important;
+        margin-top: 10%;
+        margin-bottom: auto;
+        margin-left: 40%;
+        margin-right: 40%;
         }
         .select-wrapper {
         top: 4vh !important;
