--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         }
         .control {
         position: sticky !important;
-        margin-top: 10%;
-        margin-bottom: auto;
-        margin-left: 40%;
-        margin-right: 40%;
+        margin-top: 50%;
+        margin-bottom: 50%;
+        margin-left: 50%;
+        margin-right: 50%;
         }
         .select-wrapper {
         top: 4vh !important;
