--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     </style>
 </head>
 <body>
+  <style>
+    body {
+      background-image: url('background_astro.jpeg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+    }
+    </style>
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
