--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         height: 20 !important;
         }
         .control {
-        position: sticky !important;
+        position: fixed !important;
         margin-top: 50%;
         margin-bottom: 50%;
         margin-left: 50%;
@@ -24,6 +24,7 @@
         .splide__pagination__page.is-active {
         background: #730fbf !important;
         }
+        .circle-click{background-color:#ca1a1a;border:0}
     </style>
 </head>
 <body>
