just visual stuff

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         height: 20 !important;
         }
         .control {
-        position: fixed !important;
-        margin-top: 50%;
-        margin-bottom: 50%;
-        margin-left: 50%;
-        margin-right: 50%;
+        position: relative !important;
+        top: 50px;
+        bottom: 50px;
+        left: 50px;
+        right: 50px;
         }
         .select-wrapper {
         top: 4vh !important;
