--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
         height: 20 !important;
         }
         .control {
-        position: relative !important;
-        top: 50px;
-        bottom: 50px;
-        left: 50px;
-        right: 50px;
+        position: absolute !important;
+        margin-top: 0px;
+        margin-left: 350px;
+        margin-bottom: 200px;
         }
         .select-wrapper {
         top: 4vh !important;
