--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </script>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css" rel="stylesheet"/>
-<link href="https://tala-speech.eu2.ddd.tala.cloud/tala-speech-0.1.2/index.css" rel="stylesheet"/>
+<link href="index.css" rel="stylesheet"/>
 <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"
         integrity="sha256-b/fLMBwSqO9vy/phDPv6OufPpR+VfUL+OsTEkJMPg+Q=" crossorigin="anonymous"></script>
 
