--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         data-tts-voice="en-US, CoraNeural"
         data-asr-language="en-US"
         data-tts-lexicon=""
-        data-i18n-click-to-start="Welcome! Click to start!"
+        data-i18n-click-to-start="Welcome! Click to start"
         data-i18n-click-to-continue="Click to continue"
         data-i18n-speaking="Talking…"
         data-i18n-listening="Listening…">
