--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
-      background-size: 100%;
+      background-position: center center;
     }
     </style>
     <div id="tala-speech"
