--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
-      background-position: center center;
+      height: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
     </style>
     <div id="tala-speech"
