--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <style>
     body {
       background-image: url('background_astro.jpeg');
-      height: 100%;
+      max-width: 100%;
+      height: auto;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
