--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
 <body>
   <style>
     body {
-      background-image: url('background_astro.jpeg');
-      max-width: 100%;
-      height: auto;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
+      background-image: url('wallpaper.jpg');
     }
     </style>
     <div id="tala-speech"
