--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
   <style>
     body {
       background-image: url('wallpaper.jpg');
+      background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            position: fixed;
+            height: 100%;
+            width: 100%;
     }
     </style>
     <div id="tala-speech"
