--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             position: fixed;
-            height: 100%;
-            width: 100%;
+            max-width: 100%;
+            height: auto;
     }
     </style>
     <div id="tala-speech"
