--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 <body>
   <style>
     body {
-      background-image: url('background.jpeg');
+      background-image: url('wallpaper.jpg');
       background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
             position: fixed;
-            max-width: 100%;
-            height: auto;
+            height: 100%;
+            width: 100%;
     }
     </style>
     <div id="tala-speech"
