--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <style>
     body {
-      background-image: url('wallpaper.jpg');
+      background-image: url('icons/wallpaper.jpg');
       background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
