--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="tala-speech"
         data-azure-key="c76f015b12f84e049500b18596d58382"
         data-tdm-endpoint="http://localhost:9090/interact"
-        data-tts-voice="en-US, CoraNeural"
+        data-tts-voice="en-US, MichelleNeural"
         data-asr-language="en-US"
         data-tts-lexicon=""
         data-i18n-click-to-start="Welcome! Click to start"
